add users schema to swagger
