# www/app/Http/Requests/StoreUserRequest.php
@@ -6,6 +6,39 @@ use Illuminate\Contracts\Validation\Validator;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Http\Exceptions\HttpResponseException;
 
+/**
+ * @OA\Schema(
+ *      title="Store User request",
+ *      description="Store User request body data",
+ *      type="object",
+ *      required={"name", "email", "password", "phone_number"},
+ *      @OA\Property(
+ *          title="User name",
+ *          description="User name",
+ *          property="name",
+ *          type="string"
+ *      ),
+ *      @OA\Property(
+ *          title="User email",
+ *          description="User email",
+ *          property="email",
+ *          type="string",
+ *          format="email"
+ *      ),
+ *      @OA\Property(
+ *          title="User password",
+ *          description="User password",
+ *          property="password",
+ *          type="string",
+ *      ),
+ *      @OA\Property(
+ *          title="User phone number",
+ *          description="User phone number",
+ *          property="phone_number",
+ *          type="integer"
+ *      )
+ * )
+ */
 class StoreUserRequest extends FormRequest
 {
     /**
